# food_reco_agent

./: .env-sample  .gitignore  README.md  create_tables.py  main.py  naver_search.py  pyproject.toml  requirements.txt  run_app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ApiStatus.tsx  Header.tsx  LoadingSpinner.tsx  RecommendationForm.tsx  RecommendationResults.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: __init__.py  custom_types.py  database.py  dbinspect.py  main.py  models.py  naver_search.py  nodes.py  restaurant_data.py  types.py
src/api/: __init__.py  main.py
src/core/: __init__.py  graph.py  graph_types.py  nodes.py
src/database/: __init__.py  models.py  queries.py  storage_service.py
src/services/: __init__.py  naver_search.py  restaurant_data.py
src/utils/: __init__.py
src/web/: __init__.py  streamlit_app.py
